--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "epd2in13",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Nodejs driver for the Waveshare 2.13inch (B) e-Paper Hat",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gaweee/epd2in13"
   },
   "keywords": [
     "epaper",
